// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > project create should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "body": FormData {
        Symbol(impl): FormDataImpl {
          "_entries": Array [
            Object {
              "name": "project",
              "value": "{\\"bounds\\":{\\"north\\":39,\\"east\\":-76,\\"south\\":38,\\"west\\":-77},\\"description\\":\\"Project description\\",\\"id\\":\\"00000000-0000-0000-0000-000000000000\\",\\"name\\":\\"Mock Project\\",\\"opportunityDatasets\\":[{\\"dataSource\\":\\"lodes-data-2014\\",\\"name\\":\\"Workers total\\",\\"key\\":\\"Workers_total\\"}],\\"r5Version\\":\\"v3.2.0\\"}",
            },
          ],
          Symbol(wrapper): [Circular],
        },
      },
      "method": "post",
    },
    "url": "/api/project",
  },
  "type": "fetch",
}
`;

exports[`actions > project create should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": FormData {
          Symbol(impl): FormDataImpl {
            "_entries": Array [
              Object {
                "name": "project",
                "value": "{\\"bounds\\":{\\"north\\":39,\\"east\\":-76,\\"south\\":38,\\"west\\":-77},\\"description\\":\\"Project description\\",\\"id\\":\\"00000000-0000-0000-0000-000000000000\\",\\"name\\":\\"Mock Project\\",\\"opportunityDatasets\\":[{\\"dataSource\\":\\"lodes-data-2014\\",\\"name\\":\\"Workers total\\",\\"key\\":\\"Workers_total\\"}],\\"r5Version\\":\\"v3.2.0\\"}",
              },
            ],
            Symbol(wrapper): [Circular],
          },
        },
        "method": "post",
      },
      "url": "/api/project",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > project create should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": FormData {
          Symbol(impl): FormDataImpl {
            "_entries": Array [
              Object {
                "name": "project",
                "value": "{\\"bounds\\":{\\"north\\":39,\\"east\\":-76,\\"south\\":38,\\"west\\":-77},\\"description\\":\\"Project description\\",\\"id\\":\\"00000000-0000-0000-0000-000000000000\\",\\"name\\":\\"Mock Project\\",\\"opportunityDatasets\\":[{\\"dataSource\\":\\"lodes-data-2014\\",\\"name\\":\\"Workers total\\",\\"key\\":\\"Workers_total\\"}],\\"r5Version\\":\\"v3.2.0\\"}",
              },
            ],
            Symbol(wrapper): [Circular],
          },
        },
        "method": "post",
      },
      "url": "/api/project",
    },
    "type": "decrement outstanding fetches",
  },
  Array [
    Array [
      Object {
        "payload": Object {
          "bounds": Object {
            "east": -76,
            "north": 39,
            "south": 38,
            "west": -77,
          },
          "description": "Project description",
          "id": 1,
          "name": "Mock Project",
          "opportunityDatasets": Array [
            Object {
              "dataSource": "lodes-data-2014",
              "key": "Workers_total",
              "name": "Workers total",
            },
          ],
          "r5Version": "v3.2.0",
        },
        "type": "set project",
      },
      Object {
        "payload": Array [
          Object {
            "dataSource": "lodes-data-2014",
            "key": "Workers_total",
            "name": "Workers total",
          },
        ],
        "type": "opportunityDatasets/SET_ALL",
      },
      undefined,
    ],
    Array [
      Object {
        "payload": Object {
          "options": Object {},
          "url": "/api/project/1",
        },
        "type": "increment outstanding fetches",
      },
      Promise {},
    ],
  ],
]
`;

exports[`actions > project deleteProject should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "method": "delete",
    },
    "url": "/api/project/1",
  },
  "type": "fetch",
}
`;

exports[`actions > project deleteProject should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "method": "delete",
      },
      "url": "/api/project/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > project deleteProject should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "method": "delete",
      },
      "url": "/api/project/1",
    },
    "type": "decrement outstanding fetches",
  },
  Array [
    Object {
      "payload": "1",
      "type": "delete project",
    },
    Object {
      "payload": Object {
        "args": Array [
          "/",
        ],
        "method": "push",
      },
      "type": "@@router/CALL_HISTORY_METHOD",
    },
  ],
]
`;

exports[`actions > project load should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "url": "/api/project/1",
  },
  "type": "fetch",
}
`;

exports[`actions > project load should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {},
      "url": "/api/project/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > project load should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {},
      "url": "/api/project/1",
    },
    "type": "decrement outstanding fetches",
  },
  Array [
    Object {
      "payload": Object {
        "bounds": Object {
          "east": -76.81503295898438,
          "north": 39.02345139405932,
          "south": 38.777640223073355,
          "west": -77.25723266601562,
        },
        "bundles": Array [],
        "description": "Project description",
        "name": "Project name",
        "scenarios": Array [],
      },
      "type": "set project",
    },
    Object {
      "payload": Object {
        "lat": 38.900545808566335,
        "lon": -77.0361328125,
      },
      "type": "set map center",
    },
    Object {
      "type": "set bundles",
    },
    Object {
      "type": "set scenarios",
    },
  ],
]
`;

exports[`actions > project loadAll should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "url": "/api/project",
  },
  "type": "fetch",
}
`;

exports[`actions > project loadAll should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {},
      "url": "/api/project",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > project loadAll should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {},
      "url": "/api/project",
    },
    "type": "decrement outstanding fetches",
  },
  Object {
    "payload": Array [],
    "type": "set all projects",
  },
]
`;

exports[`actions > project save should work 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "bounds": Object {
          "east": -76,
          "north": 39,
          "south": 38,
          "west": -77,
        },
        "description": "Project description",
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Mock Project",
        "opportunityDatasets": Array [
          Object {
            "dataSource": "lodes-data-2014",
            "key": "Workers_total",
            "name": "Workers total",
          },
        ],
        "r5Version": "v3.2.0",
      },
      "type": "set project",
    },
    Object {
      "payload": Array [
        Object {
          "dataSource": "lodes-data-2014",
          "key": "Workers_total",
          "name": "Workers total",
        },
      ],
      "type": "opportunityDatasets/SET_ALL",
    },
    [Function],
  ],
  Object {
    "payload": Object {
      "next": [Function],
      "options": Object {
        "body": FormData {
          Symbol(impl): FormDataImpl {
            "_entries": Array [
              Object {
                "name": "project",
                "value": "{\\"bounds\\":{\\"north\\":39,\\"east\\":-76,\\"south\\":38,\\"west\\":-77},\\"description\\":\\"Project description\\",\\"id\\":\\"00000000-0000-0000-0000-000000000000\\",\\"name\\":\\"Mock Project\\",\\"opportunityDatasets\\":[{\\"dataSource\\":\\"lodes-data-2014\\",\\"name\\":\\"Workers total\\",\\"key\\":\\"Workers_total\\"}],\\"r5Version\\":\\"v3.2.0\\"}",
              },
            ],
            Symbol(wrapper): [Circular],
          },
        },
        "method": "put",
      },
      "url": "/api/project/00000000-0000-0000-0000-000000000000",
    },
    "type": "fetch",
  },
]
`;

exports[`actions > project save should work 2`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "bounds": Object {
          "east": -76,
          "north": 39,
          "south": 38,
          "west": -77,
        },
        "description": "Project description",
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Mock Project",
        "opportunityDatasets": Array [
          Object {
            "dataSource": "lodes-data-2014",
            "key": "Workers_total",
            "name": "Workers total",
          },
        ],
        "r5Version": "v3.2.0",
      },
      "type": "set project",
    },
    Object {
      "payload": Array [
        Object {
          "dataSource": "lodes-data-2014",
          "key": "Workers_total",
          "name": "Workers total",
        },
      ],
      "type": "opportunityDatasets/SET_ALL",
    },
    undefined,
  ],
  Array [
    Object {
      "payload": Object {
        "options": Object {
          "body": FormData {
            Symbol(impl): FormDataImpl {
              "_entries": Array [
                Object {
                  "name": "project",
                  "value": "{\\"bounds\\":{\\"north\\":39,\\"east\\":-76,\\"south\\":38,\\"west\\":-77},\\"description\\":\\"Project description\\",\\"id\\":\\"00000000-0000-0000-0000-000000000000\\",\\"name\\":\\"Mock Project\\",\\"opportunityDatasets\\":[{\\"dataSource\\":\\"lodes-data-2014\\",\\"name\\":\\"Workers total\\",\\"key\\":\\"Workers_total\\"}],\\"r5Version\\":\\"v3.2.0\\"}",
                },
              ],
              Symbol(wrapper): [Circular],
            },
          },
          "method": "put",
        },
        "url": "/api/project/00000000-0000-0000-0000-000000000000",
      },
      "type": "increment outstanding fetches",
    },
    Promise {},
  ],
]
`;

exports[`actions > project save should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": FormData {
          Symbol(impl): FormDataImpl {
            "_entries": Array [
              Object {
                "name": "project",
                "value": "{\\"bounds\\":{\\"north\\":39,\\"east\\":-76,\\"south\\":38,\\"west\\":-77},\\"description\\":\\"Project description\\",\\"id\\":\\"00000000-0000-0000-0000-000000000000\\",\\"name\\":\\"Mock Project\\",\\"opportunityDatasets\\":[{\\"dataSource\\":\\"lodes-data-2014\\",\\"name\\":\\"Workers total\\",\\"key\\":\\"Workers_total\\"}],\\"r5Version\\":\\"v3.2.0\\"}",
              },
            ],
            Symbol(wrapper): [Circular],
          },
        },
        "method": "put",
      },
      "url": "/api/project/00000000-0000-0000-0000-000000000000",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > project setAll should work 1`] = `
Object {
  "type": "set all projects",
}
`;
